# toolbox

./: .bazelignore  .bazelrc  .bazelversion  .buildinfo  .clang-format  .clang-tidy  .flake8  .gitattributes  .gitignore  .prettierignore  .prettierrc  .readthedocs.yaml  BUILD  CLAUDE.md  LICENSE  MODULE.bazel  README.html  README.md  WORKSPACE  bringup.html  buildbuddy.yaml  cargo-bazel-lock.json  codecov.yml  common_references.html  conf.py  copts_transition.bzl  cpp_testing.html  development.html  examples.html  gazelle_proto_config.yaml  gazelle_python.yaml  genindex.html  hello.html  index.html  index.rst  issue_management.html  lint.sh  multitool.lock.json  mypy.ini  myst.html  (+19 more)
.aspect/bazelrc/: BUILD  correctness.bazelrc  performance.bazelrc
.claude/commands/: issue-workflow.md
.doctrees/: README.doctree  bringup.doctree  common_references.doctree  cpp_testing.doctree  development.doctree  environment.pickle  examples.doctree  hello.doctree  index.doctree  issue_management.doctree  myst.doctree  myst_extensions.doctree  sbr_components.doctree  structure.doctree  useful_commands.doctree
.doctrees/autoapi/: index.doctree
.doctrees/common/: python_references.doctree
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docker/: Dockerfile
.github/workflows/: build-and-test.yml  build-ci-image.yml  flakiness.yml  publish-docs.yml  publish-wheel.yml  publish.yml  renovate.yml  upgrade-dependencies.yml
_modules/: index.html
_modules/apps/: bazel_parser.html
_sources/: README.md.txt  bringup.md.txt  cpp_testing.md.txt  hello.rst.txt  myst.md.txt  useful_commands.md.txt
_sources/autoapi/: index.rst.txt
_static/tippy/: README.040c804e-e509-4309-bdba-749d7c15db37.js  README.06ca1f68-12ff-45dd-9c6f-c8b1722a3f9d.js  README.07455d17-a8dc-4030-883e-005c137d10de.js  README.0e876f50-f287-44e2-ab41-3952ba832df1.js  README.13128b52-bea6-47b1-8f25-c670094c3b3b.js  README.13e96f20-fbb2-43c7-8204-1de69404b130.js  README.14f24a75-de12-4621-a915-1c83cf38ef7b.js  README.21c335ff-a4cf-4f33-9be7-a99fed9517b0.js  README.26337332-0019-4feb-be34-491dc65a667b.js  README.26d53ef3-ef8b-4caf-9c5e-f0e5b4a61a62.js  README.286909a8-74cd-44b1-8453-e8dc05151c5a.js  README.2d63bf54-5f11-47fe-86b9-388734be5427.js  README.30716a4e-1925-4124-9d66-d8a82f7dad54.js  README.35e4f261-ee22-4228-ab24-715691def3d8.js  README.3ab9ea12-83ba-448a-8e47-b1ad6c35596a.js  README.44fccea1-0432-44e5-9a8f-496ed8dc7ca9.js  README.4853fdc1-8238-4850-9ad2-628ab1c6937d.js  README.4c2282ca-55b4-4ba1-a2eb-ff704421cb9c.js  README.4c9bd523-9ef0-49e7-b94e-aeb654019543.js  README.5223a751-3191-4a70-810e-767b35bc53ef.js  README.61b126b6-44ce-4f58-832e-34276d169236.js  README.63962fa0-ccab-4dda-89d5-90fa37e69c6c.js  README.66846d20-2236-4ab5-b2e0-4f682c3db883.js  README.68ea199d-4bc7-4569-abea-d55be3993064.js  README.6ede52e7-f3ab-414e-9613-1acad3fd27d2.js  README.6f2a77b8-d933-4540-b2cd-01df04bf55d3.js  README.71b7a3a2-7e73-406d-a3be-b4ca82bff6af.js  README.7909cfee-b684-4518-a3e9-45a74871f6b1.js  README.7d1e13fc-094f-4946-ba23-1ada7c13c4f9.js  README.832a162a-fcbb-4beb-8738-12b625cb09aa.js  README.8af44f80-5695-4794-bf71-1b10eef33fb5.js  README.8faeee4f-1a21-41e8-8463-f4e7aef29422.js  README.9262cb15-3129-4e40-bfff-24c0342a4b2e.js  README.b2e6a5b4-5a01-4344-bd31-48662455fe66.js  README.b5efb8e3-1e58-4321-9545-e3e66dc45744.js  README.b6cf0018-ea53-4e81-a34c-73cae745c50b.js  README.b9a81d7c-7b98-4ce9-a7b7-4fa5acdf0d83.js  README.ba518cb6-c094-485c-ba48-f37e93b27e76.js  README.bdc42b98-6622-47ca-bad1-6c3a9fb70189.js  README.cc3a8e0f-2562-4ef9-a798-6e45608e2c05.js  (+269 more)
algorithms/: README.md  weighted_probability.py
ansible_playbooks/: dev_setup.yaml
ansible_playbooks/ssh_keys/: mchristen_phone  mchristen_work
apps/: BUILD  bazel_parser.py  example_bokeh.py
apps/bazel_parser/: BUILD  README.md  bazel_parser.py  bazel_parser_test.py  cli.py  collect.sh  panel.py  parsing.py  refinement.py  repo_graph_data.py  repo_graph_data_test.py
apps/blinky/: BUILD  main.cc
apps/code_metrics/: BUILD  README.md  db.py  main.py  models.py
apps/csv-to-sheets/: csv2sheets.py  (+1 more)
autoapi/: index.html
bzl/: BUILD  bin_size.sh  cc.bzl  kicad.bzl  py.bzl  pytest_main.py
common/: python_references.html
docs/: BUILD  README.md  bringup.md  common_references.md  conf.py  cpp_testing.md  development.md  example.py  examples.md  hardware.md  hello.rst  index.rst  issue_management.md  log.md  myst.md  myst_extensions.md  sbr_components.md  structure.md  useful_commands.md
libraries/pw_board_led/: BUILD.bazel  BUILD.gn
libraries/pw_board_led/public/pw_board_led/: led.h
libraries/pw_board_led_rp2040/: BUILD.bazel  BUILD.gn  led.cc
libraries/pw_board_led_stm32f429i_disc1/: BUILD.bazel  BUILD.gn  led.cc
libraries/pw_board_led_teensy/: BUILD.gn  led.cc
nobazel/: BUILD  WORKSPACE
notebooks/: investigate_bazel.ipynb  investigate_bazel.md  investigate_bazel.py  investigate_bazel_drake.ipynb  investigate_bazel_drake.md  investigate_bazel_drake.py
packaging/: BUILD  generated.bzl  query_generator.py
scripts/: build_venv.sh  trim_branches.sh  update_protos
system/: BUILD
targets/: BUILD  BUILD.bazel  transition.bzl
targets/arduino/: BUILD.gn  target_toolchains.gni
targets/host/: BUILD.bazel  BUILD.gn  system.cc  target_toolchains.gni
targets/rp2/: BUILD.bazel  binary.bzl  led.cc  system.cc  unit_test_rpc_main.cc
targets/rp2040/: BUILD.bazel  BUILD.gn
targets/stm32f429i_disc1_stm32cube/: BUILD.bazel  BUILD.gn  target_toolchains.gni
testing/: BUILD
tools/: BUILD  README.md  _multirun_under_cwd.sh  affected_targets.sh  aspects.bzl  bazel_executable_hash.py  bazel_utils.py  coverage_baseline.py  emboss.ccindex  exec_change_cwd.sh  generate_ccindex.py  git.proto  git_utils.py  git_utils_test.py  lint.bzl  lint.sh  multitool  nanopb.ccindex  pigweed.ccindex  tools.bzl  useful_commands.md  utils.py  workspace_status.sh
utils/: BUILD  bep_reader.py  graph_algorithms.py  graph_algorithms_test.py  path_utils.py  path_utils_test.py  proto.py  proto_test.py
(+994 files in other folders)
