# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:compatibility.bzl", "host_backend_alias")
load("@pigweed//pw_build:pigweed.bzl", "pw_facade")

package(default_visibility = ["//visibility:public"])

pw_facade(
    name = "pw_board_led",
    hdrs = ["public/pw_board_led/led.h"],
    backend = ":pw_board_led_backend",
    includes = ["public"],
)

constraint_setting(
    name = "pw_board_led_constraint_setting",
)

alias(
    name = "pw_board_led_backend",
    actual = select({
        "//libraries/pw_board_led_host:backend_constraint_value": "//libraries/pw_board_led_host",
        "//libraries/pw_board_led_rp2040:backend_constraint_value": "//libraries/pw_board_led_rp2040",
        "//libraries/pw_board_led_stm32f429i_disc1:backend_constraint_value": "//libraries/pw_board_led_stm32f429i_disc1",
        "//conditions:default": ":unspecified_backend",
    }),
)

host_backend_alias(
    name = "unspecified_backend",
    backend = "//libraries/pw_board_led_host",
)
