# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/facade.gni")

declare_args() {
  # The backend (driver) to use for the board LED.
  pw_board_led_BACKEND = ""
}

config("public_includes") {
  include_dirs = [ "public" ]
}

pw_facade("pw_board_led") {
  backend = pw_board_led_BACKEND
  public_configs = [ ":public_includes" ]
  public = [ "public/pw_board_led/led.h" ]
}
