# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_arduino_build/arduino.gni")
import("$dir_pw_build/target_types.gni")

pw_source_set("pw_board_led_teensy") {
  deps = [
    "$dir_pw_third_party/arduino:arduino_core_sources",
    "//libraries/pw_board_led:pw_board_led.facade",
  ]
  sources = [ "led.cc" ]
  remove_configs = [ "$dir_pw_build:strict_warnings" ]
}
